# socket-io-listen-notify

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  gunicorn.config.py  justfile  main.py  pyproject.toml
app/: api.py  config.py  db.py  lifespan.py  listener.py  pub_sub_manager.py  socket_server.py
tests/: conftest.py  test_message_fan_out.py
